# cuda-course

./: .gitignore  GPU_ARCHITECTURE_MAP.md  HARDWARE_MENTAL_MODELS.md  OUTLINE.md  README.md  RESEARCH_NOTES.md  WRITING_GUIDE.md  humanize_module16.py  humanize_module17.py  plan-module19.md  plan.md  resources.md
assessments/: diagnostic.md  rubric.md  weekly-checkpoints.md
diagrams/: DIAGRAM_PLAN.md  capstone-system-pipeline.excalidraw  course-knowledge-map.excalidraw  cuda-execution-model.excalidraw  cuda-memory-hierarchy.excalidraw  module-00-cuda-host-device-model.excalidraw  module-01-cuda-execution-hierarchy.excalidraw  module-02-cuda-memory-spaces.excalidraw  module-03-gpu-memory-hierarchy-pyramid.excalidraw  module-04-reduction-tree.excalidraw  module-05-gpu-profiling-tools.excalidraw  module-06-parallel-algorithm-patterns.excalidraw  module-07-cuda-libraries-hierarchy.excalidraw  module-08-cuda-stream-overlap.excalidraw  module-09-gpu-architecture-occupancy.excalidraw  module-10-cuda-production-engineering.excalidraw  module-11-capstone-workflow.excalidraw  module-12-gpu-architecture-matrix.excalidraw  module-13-gemm-tensor-core.excalidraw  module-14-async-pipeline-ptx.excalidraw  module-15-cutlass-deepgemm.excalidraw  module-16-nccl-communication-topology.excalidraw  module-17-pytorch-custom-op.excalidraw  module-18-pagedattention-kv-cache.excalidraw  module-19-cuda-triton-tilelang-comparison.excalidraw  profiling-optimization-loop.excalidraw  stream-concurrency-timeline.excalidraw
starter-code/: CMakeLists.txt  cuda_check.cuh  vector_add.cu
(+30 files in other folders)
